    select system calls gets interrupted.
54. src/slposio.c: Add == and != operators to FD_Type objects so that
    fileno(stdin)==fileno(stdin) works as expected.
55. src/slarray.c: wherefirst and wherelast were not working with
    empty arrays.
56. src/slmisc.c: SLang_guess_type was failing on numbers containing a
    leading '+' sign.

{{{ Previous Versions

Changes since 2.0.5
1. src/slmath.c: nint was returning the wrong value for numbers 0.5<=x<1.
2. src/slarrfuns.c: sum(Double_Type[0,0],1) was generating an access
   error.
3. src/*.c: Removed some unused variables.
4. src/slcommon.c: '=' instead of '==' was being used in the
   utf8_enable function.
5. doc/tm/*.tm: corrected some documentation typos (Nelson Beebe,
   beebe at math, utah, edu).
7. src/sltime.c: times function was returning a structure containing
   incorrect values (cstawarz at head, cfa, harvard, edu).
8. src/sldisply.c: Writing a multi-byte character to the lower-right corner 
   of terminals with automatic margins was not working (Vladimir
   Nadvornik nadvornik at suse, cz).
9. src/slwclut.c: Allow \\^ in character set specifications to
   represent a literal '^'.  See the documentation for strtrans for
   more information.
10. src/slcommon.c: Some systems that have nl_langinfo do not have
    CODESET.  The configure script now checks for both.
11. autoconf/Makefile.in: Added ".PHONY" and "check" targets.
12. src/slstrops.c: "%c" in an sprintf style format descriptor made to
    work with wide-character arguments.  It is nolonger necessary to
    use "%lc".
13. src/slmisc.c: Semantics of "\x{...}" changed to be more useful
    when the interpreter is running in non-UTF8 mode.  Previously,
    "\x{...}" always expanded to a UTF-8 encoded string, regardless of
    the UTF-8 mode.  Now, in non-UTF8 mode, \x{...} will expand to a
    UTF-8 encoded string when "..." consists of 3 or more characters,
    and for less than 2 characters, it specifies a byte.  The behavior